# ml-autoresearch

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  EXPERIMENT_INDEX.md  Makefile  README.md  afk-prompt.txt  agent-boundary.toml  candidate-execution.toml  pyproject.toml  research-ledger.jsonl
.pi/: enclave.toml
campaign-reports/: 2026-05-23-status.md  2026-05-31-status.md  2026-06-13-artifact-visibility-blocker.md  2026-06-13-artifact-visibility-still-blocked.md  2026-06-13-status.md
capability-requests/: capability-2026-05-29-failure-bucket-metrics-artifacts.yaml  capability-2026-05-31-boundary-target-auxiliary.yaml  capability-2026-06-01-boundary-target-agent-validator-sync.yaml  capability-2026-06-13-completed-run-artifact-exposure.yaml  capability-2026-06-13-scheduler-early-stopping.yaml
containers/: Dockerfile.agent  Dockerfile.enclave  Dockerfile.runner  Makefile  gondolin-build-config.json
docs/: agent-control-boundary.md  autonomous-agent-prompting.md  autoresearch-skills  campaign-autonomy-architecture.md  campaign-report-format.md  candidate-experiment-contract.md  capability-request-format.md  dependency-strategy.md  evaluation-request-format.md  experiment-batches.md  fort.toml  gvccs-data.md  gvccs-features.md  harness-capabilities.md  project-brief.md  research-problem-disentangling.md  run-lifecycle.md  top-level-plan.md  tracer-bullet-issues.md
enclave-container/: Dockerfile  Makefile  build-config.json
evaluation-requests/: eval-2026-05-22-run-20260510-failure-buckets.yaml  eval-2026-05-29-medium-unet-failure-buckets.yaml  eval-2026-05-30-large-unet-failure-buckets.yaml  eval-2026-05-30-wide-unet-failure-buckets.yaml  eval-2026-05-30-xwide-unet-failure-buckets.yaml  eval-2026-05-31-xwide-dropout-failure-buckets.yaml  eval-2026-06-01-xwide-dropout-p0075-epoch40-failure-buckets.yaml  eval-2026-06-01-xwide-dropout-p0075-failure-buckets.yaml  eval-2026-06-02-xwide-dropout-p005-epoch40-failure-buckets.yaml  eval-2026-06-03-xwide-dropout-p0075-epoch60-failure-buckets.yaml  eval-2026-06-15-plateau-es-failure-buckets.yaml  (+3 more)
tests/: conftest.py  (+55 more)
(+262 files in other folders)
