[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-autoresearch"
version = "0.1.0"
description = "Safe agent-assisted ML autoresearch harness"
readme = "docs/top-level-plan.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
