[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-autoresearch"
version = "0.1.0"
description = "Safe agent-assisted ML autoresearch harness"
readme = "docs/top-level-plan.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2,<3",
  "pillow>=10,<12",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
]

[project.scripts]
ml-autoresearch = "ml_autoresearch.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "torch==2.5.1+cpu",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu", extra = "dev" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that exercise external services such as Docker",
]
